# lead-priority-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README.tr.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/: feature_pipeline.joblib  feature_summary.json  lead_scoring_lgbm.joblib  lead_scoring_lr.joblib  lead_scoring_metrics.json  leakage_report.json  priority_metrics.json  sentiment_metrics.json
artifacts/sentiment_predictions/: glm-4-5-air_test.csv  glm-4-5-air_test.parquet
data/synthetic/: interactions.csv  interactions.parquet
deploy/: setup.py
docs/: 0_synthetic_data_and_leakage.docx  1_eda_and_feature_engineering.docx  2_lead_scoring.docx  3_sentiment_classifier.docx  4_priority_score.docx  5_fastapi_serving_and_deployment.docx  6_deployment.docx  synthetic_data_and_leakage.docx
examples/: score_request.json
notebooks/: 0_leakage_analysis.ipynb  1_eda_and_feature_engineering.ipynb  2_lead_scoring.ipynb  3_sentiment_classifier.ipynb  4_priority_demo.ipynb  leakage_analysis.ipynb
scripts/: evaluate_openrouter_sentiment.py  fit_feature_pipeline.py  generate_interactions.py  leakage_analysis.py  setup.py  train_lead_scoring.py
scripts/datagen/: __init__.py  leakage.py  synthetic_interactions.py
src/lead_priority/: __init__.py  settings.py
src/lead_priority/api/: deps.py  errors.py  logging.py  main.py  middleware.py  schemas.py
src/lead_priority/api/endpoints/: __init__.py  health.py  score.py  top_leads.py
src/lead_priority/core/: __init__.py
src/lead_priority/core/features/: __init__.py  constants.py  derive.py  pipeline.py  transformers.py
src/lead_priority/core/inference/: __init__.py  lead_scoring.py
src/lead_priority/core/scoring/: __init__.py  priority.py  sentiment_classes.py
src/lead_priority/features/: __init__.py  constants.py  derive.py  pipeline.py
src/lead_priority/infra/: __init__.py
src/lead_priority/infra/openrouter/: __init__.py  sentiment.py
src/lead_priority/models/: __init__.py  lead_scoring.py  priority.py  sentiment.py
src/lead_priority/utils/: logging.py
tests/: conftest.py  test_api_health.py  test_api_logging.py  test_api_score.py  test_api_top_leads.py  test_features_derive.py  test_features_pipeline.py  test_models_lead_scoring.py  test_models_priority.py  test_models_sentiment.py  test_smoke.py  test_synthetic_interactions.py
